<resources>
    <string name="app_name">MicroPay</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EMAIL">Email</string>
    <string name="PASSWORD">password</string>
    <string name="LOGIN">Log In</string>
    <string name="money_input_hint">money amount</string>
    <string name="transfer">transfer</string>
    <string name="nfc_transfer">nfc transfer</string>
    <string name="receive_money">receive</string>
    <string name="account">account</string>
    <string name="username">username</string>
    <string name="title_activity_login">MicroPay</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="use_nfc_label">Or use NFC...</string>
    <string name="receiver_account">Receiver Account</string>
    <string name="Shopping">Shopping</string>
    <string name="ItemID">ItemID</string>
    <string name="UserID">UserID</string>
    <string name="set_button">Set Button</string>
    <string name="receive_waiting_hint">Touch this device to transfer</string>
    <string name="nfc_transfer_waiting">Waiting...</string>

</resources>
